<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewShowTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <RatingBar
        android:id="@+id/showRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewShowTitle"
        android:layout_margin="20dp"
        android:isIndicator="true"
        android:progressTint="@color/golden"
        android:progressBackgroundTint="@color/light_grey"
        android:secondaryProgressTint="@color/dark_golden"
        />

    <LinearLayout
        android:id="@+id/linearLayoutShowCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showRate"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewShowCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewShowCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutShowDateWatched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutShowCategory"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watched_at"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewShowDateWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutShowDateWatched"
        android:layout_margin="10dp"
        android:text="@string/comments"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/textViewShowComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewComments"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_goneMarginRight="10dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewShowComments"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>